--- a/doc/cp2019-20_project_47590_48425.tex
+++ b/doc/cp2019-20_project_47590_48425.tex
@@ -162,11 +162,22 @@ Gather's implementation was very similar to pack's (\ref{pack}), with a \textit{
 
 For testing, we created a filter with the same size as there were jobs and populated it with random integers that could be anywhere between 0 and $ n - 1 $, with n being the number of jobs.
 
-The pack results seem, at first, really odd as it gets worse performance as the core count grows up to around 500.000 jobs. And, even between 500.000 and 1.000.000 jobs, it shows a linear speed up from 2 to 8 cores and then it starts showing a linear negative speedup.
+Since the implementation is very similar to pack's (\ref{pack}), the results were basically the same. Gather does execute a \textit{memcpy} always instead of pack's conditional, but the amount of jobs (or job size) necessary to see a difference from this verification is immense as \textit{memcpy} is incredibly fast for byte-sized copies.
 
-On closer inspection, we notice that pack does not use a worker, but a \textit{memcpy} instruction that is only executed $ n / 2 $ times, with $ n $ being the number of jobs. This means that not only is this job not affected by the weight, but also has a lot lighter computations. Even though it uses a scan, the worker used for the scan is custom and does not include weight.
+% Scatter --------------------------------------------------------------	
+\subsection{The Scatter Pattern}
+\subsubsection{Implementation}
 
-This results in a lot faster computation, making the algorithm finish much faster than the others for the same number of jobs. And, this also means that even though it shows a good parallelization percentage with upwards of 80\% in the profiler, it does not spend enough time running to make up for the management cost of a high number of threads. Since it becomes impossible to increase the number of iterations due to RAM limitations, we can only "guess" that it would need a more demanding workload of 10.000.000+ jobs to start showing a linear speedup up to the number of threads of cluster.
+Our default implementation of scatter is the atomic scatter which is briefly mentioned in McCool's book, making us have to come up with our own solution. We found this variation of scatter particularly hard to implement due to not being able to use \textit{OpenMP's} \textit{atomic} pragma, as it does not work with \textit{memcpy}. Since \textit{memcpy} writes data block by block, two parallel writes can cause a corruption as the destiny can have part of the information from the first job and part from the second.
+
+Our solution was to use a custom quicksort that ordered the filter and the reordering of positions was reflected on the source array. By doing so, it was possible to add a conditional \textit{critical} pragma when the next value in the filter is equal to the current. This results in a very heavy reduction of the use of the \textit{critical} pragma and a good parallel performance at the cost of the initial quicksort computation.
+
+\subsubsection{Testing}
+The added quicksort at the beggining turned this algorithm from $ O(n) $ into $ O(n\log_n) $, meaning the computation needed to be really intense in the parallel phase to make up for the quicksorting of the int array with the positions. 
+
+In our tests we made it possible to set the size of the destiny array. The number of destiny positions gives us the probability of a hitting a collision that results on using the \textit{critical} pragma. With a low destiny array of just 10 positions, we only managed a parallelization of around 5\% because we kept hitting the \textit{critical} section. After changing the destiny array size to $ n / 2 $, with $ n $ being the number of jobs, 
+
+Since this algorithm was more complex, we had to run less iterations to keep the time down. An improvement wasn't visible until we reached 10.000 jobs, and the speedup still was really low and turning negative starting from 16 threads. At 50.000 jobs, the speedup started improving but still wasn't enough to make up for 
 
 \section{Extra Parallel Patterns}
 
