added pipeline and scatter

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -65,6 +65,18 @@
 	url = "https://www.drdobbs.com/parallel/parallel-pattern-9-pack/222000295",
 }
 
+@online{lockmanage,
+	author =  "Paul Lindberg",
+	
+	title = "Performance Obstacles for Threading: How do they affect OpenMP code?",
+	
+	urldate = "2020-14-05",
+	
+	year = "2009",
+	
+	url = "https://software.intel.com/content/www/us/en/develop/articles/performance-obstacles-for-threading-how-do-they-affect-openmp-code.html",
+}
+
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
 	CTLuse_forced_etal       = "yes",
 	CTLmax_names_forced_etal = "3",
