progress in docs

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -77,6 +77,36 @@
 	url = "https://software.intel.com/content/www/us/en/develop/articles/performance-obstacles-for-threading-how-do-they-affect-openmp-code.html",
 }
 
+@online{jlfarm,
+	author =  "Joao M. Lourenço",
+	
+	title = "Piazza: Why I'm getting better time speedups when I use more software threads than hardware threads?",
+	
+	urldate = "2020-14-05",
+	
+	url = "https://piazza.com/class/k7ahvyyb48lr6?cid=58",
+}
+
+@article{granularity,
+	author =  "Thierry Gautier and Christian Pérez and Jérôme Richard",
+	
+	title = "On the Impact of OpenMP Task Granularity",
+	
+	year = "2018",
+	
+	journal = "IWOMP 2018 - 14th International Workshop on OpenMP for Evolving Architectures",
+}
+
+@online{omporder, 
+	author =  "{OpenMP ARB}",
+	
+	title = "{OpenMP: Ordered Construct}",
+	
+	urldate = "2020-14-05",
+	
+	url = "https://www.openmp.org/spec-html/5.0/openmpsu97.html",
+}
+
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
 	CTLuse_forced_etal       = "yes",
 	CTLmax_names_forced_etal = "3",
