progress to serial pipleine

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -107,6 +107,16 @@
 	url = "https://www.openmp.org/spec-html/5.0/openmpsu97.html",
 }
 
+@online{pipelineoregon, 
+	author =  "University of Oregon",
+	
+	title = "Pipeline Pattern",
+	
+	urldate = "2020-14-05",
+	
+	url = "https://ipcc.cs.uoregon.edu/lectures/lecture-10-pipeline.pdf",
+}
+
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
 	CTLuse_forced_etal       = "yes",
 	CTLmax_names_forced_etal = "3",
